--- a/vector/build.gradle
+++ b/vector/build.gradle
@@ -163,6 +163,16 @@ android {
 
             buildConfigField "String", "DEFAULT_PUSHER_APP_ID", "\"fr.gouv.tchap.a.android\""
         }
+
+        // A custom configuration for non-french government users
+        custom {
+            dimension "target"
+
+            applicationId "io.anastas.tchap.android"
+            versionName rootProject.ext.versionNameProp + "_a"
+
+            buildConfigField "String", "DEFAULT_PUSHER_APP_ID", "\"io.anastas.tchap.android\""
+        }
     }
 
     soexcluder {
@@ -235,30 +245,23 @@ static def gitBranchName() {
 dependencies {
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
     // Kotlin KTX
     implementation 'androidx.core:core-ktx:0.3'
-
     // Kotlin coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.30.2'
-
     implementation 'com.android.support:multidex:1.0.0'
-
     implementation 'me.leolin:ShortcutBadger:1.1.2@aar'
-
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.jakewharton:butterknife:8.5.1'
     kapt 'com.jakewharton:butterknife-compiler:8.5.1'
-
     // UI
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.binaryfork:spanny:1.0.4'
     implementation 'com.github.chrisbanes:PhotoView:2.1.4'
-
     // Network
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
@@ -269,13 +272,10 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     implementation 'com.squareup.okio:okio:1.13.0'
-
     // Use Glide library to display image (Gif supported)
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     kapt 'com.github.bumptech.glide:compiler:4.7.1'
-
     implementation 'com.googlecode.libphonenumber:libphonenumber:8.9.12'
-
     /************* Matrix SDK management **************/
     // update settings.gradle
     // use the matrix SDK as external lib
@@ -284,17 +284,14 @@ dependencies {
     // you have to uncomment some lines in settings.gradle
     //implementation project(':matrix-sdk')
     implementation(name: 'olm-sdk', ext: 'aar')
-
     /************* jitsi **************/
     withvoipImplementation 'javax.inject:javax.inject:1'
-
     withvoipImplementation 'com.facebook.fbui.textlayoutbuilder:textlayoutbuilder:1.0.0'
     withvoipImplementation 'com.facebook.fresco:fresco:1.3.0'
     withvoipImplementation 'com.facebook.fresco:imagepipeline-okhttp3:1.3.0'
     withvoipImplementation 'com.facebook.soloader:soloader:0.1.0'
     withvoipImplementation 'com.google.code.findbugs:jsr305:3.0.0'
     withvoipImplementation 'org.webkit:android-jsc:r174650'
-
     withvoipImplementation(name: 'jitsi-sdk', ext: 'aar')
     withvoipImplementation(name: 'react-native-background-timer', ext: 'aar')
     withvoipImplementation(name: 'react-native-fetch-blob', ext: 'aar')
@@ -304,18 +301,13 @@ dependencies {
     withvoipImplementation(name: 'react-native-webrtc', ext: 'aar')
     withvoipImplementation(name: 'react-native', ext: 'aar')
     withvoipImplementation(name: 'react-native-locale-detector', ext: 'aar')
-
     // another tracking than GA
     implementation 'org.piwik.sdk:piwik-sdk:2.0.0'
-
     /************* flavors management **************/
-
     // app flavor only
     appImplementation 'com.google.firebase:firebase-core:16.0.4'
     appImplementation 'com.google.firebase:firebase-messaging:17.3.4'
-
     // fdroid flavor only
-
     // Test
     testImplementation 'junit:junit:4.12'
 }
